# api-showcase

api-showcase/: .gitignore  README.md  docker-compose.yml  pyproject.toml  upload_results.json
api-showcase/results/: analytics_0259f0eb50194ac5aa24dcaf937d6c6a_20251029_182402.json  analytics_04bd8e1eac0a46db80daf15cfeb65720_20251029_182402.json  analytics_070941036f6c44bfb98df31ccc001321_20251029_182402.json  analytics_0727b6d2ab534fc1b2dfb5dd08ba7a78_20251029_182402.json  analytics_081ce54b1f324e68a4182f5c353c4cc6_20251029_182402.json  analytics_09149e8268ee486cbfce58b89d42949b_20251029_182402.json  analytics_0939a4c80ce54bfc948dc8274b360d49_20251029_182402.json  analytics_0a65f6b3176b4f43888238c21148c680_20251029_182402.json  analytics_0aff6e833c7b4c2dba5e9f20ebf66a27_20251029_182402.json  analytics_0d2b7a45b6564d93b627617b2eea1846_20251029_182402.json  analytics_11aa58286a564bbfada22e8cc19dfe9a_20251029_182402.json  analytics_17684e42e11c4d55a7e2f08f65cbd764_20251029_182402.json  analytics_1837fa86a7e34eceba07f5c8974c74f8_20251029_182402.json  analytics_194202779dc84eb4b168fe0129b16bb6_20251029_182402.json  analytics_1cba34771cd0483882f35b051a2c9eed_20251029_182402.json  analytics_1e194eaa8ed642c79f355425b2485e28_20251029_182402.json  analytics_1f6295ae52824b579c0188c26f4da877_20251029_182402.json  analytics_22e6570b0f3d4a7bb44e281d4322562f_20251029_182402.json  analytics_23896c57317f4f4fb1278706973a4e53_20251029_182402.json  analytics_243761f5dab046be9372a0781341ace2_20251029_182402.json  analytics_25484d4429bf44f8b4d0e44c6ae96ea6_20251029_182402.json  (+148 more)
(+19 files in other folders)
